<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/chat_background"
        tools:context="com.ville.ultimatechatclient.MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/topToolbar"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="40dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ScrollView
            android:id="@+id/helpScroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="45dp"
            android:fillViewport="true"
            android:scrollbarStyle="outsideOverlay"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/helpFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:visibility="invisible"
                tools:layout_editor_absoluteX="182dp"
                tools:layout_editor_absoluteY="89dp">

                <TextView
                    android:id="@+id/helpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/colorCInputField"
                    android:maxWidth="300dp"
                    android:padding="8dp"
                    android:paddingTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="?attr/editTextColor"
                    android:visibility="invisible" />
            </FrameLayout>
        </ScrollView>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:elevation="4dp"
            android:minHeight="0dp"
            android:onClick="onClick"
            android:text="@string/sendString"
            android:background="@drawable/button"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?attr/editTextColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/inputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorCInputField"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/sendButton" />

        <ScrollView
            android:id="@+id/convoScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:background="#00000000"
            android:fillViewport="true"
            android:scrollbarStyle="outsideOverlay"
            app:layout_constraintBottom_toTopOf="@+id/sendButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:id="@+id/convoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:background="#00000000"
                android:orientation="vertical"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="-21dp">

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/promptLayout"
            android:layout_width="247dp"
            android:layout_height="69dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/prompt_background"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topToolbar">

            <EditText
                android:id="@+id/promptField"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="12dp"
                android:background="@color/colorCInputField"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/RegisterHint"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:visibility="invisible"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="193dp" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/promptField"
                android:layout_alignBottom="@+id/promptField"
                android:layout_gravity="end"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@+id/promptField"
                android:minHeight="0dp"
                android:onClick="onClick"
                android:text="@string/OK"
                android:background="@drawable/button"
                android:visibility="invisible"
                tools:layout_editor_absoluteX="247dp"
                tools:layout_editor_absoluteY="193dp" />
        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/leftDrawer"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorCDarkBlue"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:minHeight="0dp"
            android:layout_margin="6dp"
            android:background="@drawable/button"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?android:attr/editTextColor"
            android:textOff="@string/textOff"
            android:textOn="@string/textOn"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/createChanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/deleteChanButton"
            android:layout_marginTop="10dp"
            android:minHeight="0dp"
            android:onClick="onClick"
            android:layout_marginEnd="6dp"
            android:text="@string/createText"
            android:background="@drawable/button"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?attr/editTextColor"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/deleteChanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/gridFrame"
            android:layout_marginEnd="6dp"
            android:minHeight="0dp"
            android:onClick="onClick"
            android:background="@drawable/button"
            android:text="@string/deleteText"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?attr/editTextColor"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/channelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/channelText"
            android:textColor="@color/colorCInputField"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/channelSpinner"
            android:background="@drawable/spinner_background"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:layout_below="@+id/channelText"
            android:minWidth="140dp" />

        <LinearLayout
            android:id="@+id/gridFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/channelSpinner"
            android:layout_margin="7dp"
            android:background="@color/colorCIceBlue"
            android:orientation="vertical">

            <GridView
                android:id="@+id/userGrid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/channel_background"
                android:columnWidth="60dp"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:numColumns="auto_fit"
                android:padding="10dp"
                android:stretchMode="none"
                android:verticalSpacing="10dp" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
